# compiler-builtins

./: .a.aux  Cargo.toml  README.md  a.glob  a.v  a.vo  build.rs  configure.rs
.github/workflows/: main.yaml
builtins-shim/: Cargo.toml
builtins-test/: Cargo.toml
builtins-test-intrinsics/src/: main.rs
builtins-test/benches/: float_extend.rs  float_trunc.rs
builtins-test/src/: bench.rs  lib.rs
builtins-test/tests/: conv.rs  div_rem.rs
ci/: ci-util.py  run.sh
compiler-builtins/: Cargo.toml  build.rs  configure.rs
compiler-builtins/src/: lib.rs  macros.rs
crates/musl-math-sys/: Cargo.toml
crates/util/: Cargo.toml
docker/: Dockerfile
etc/: function-definitions.json  function-list.txt  update-api-list.py
examples/: intrinsics.rs
libm/: Cargo.toml  configure.rs
libm-test/: Cargo.toml  build.rs
libm-test/benches/: icount.rs
libm-test/src/: builtins_wrapper.rs  domain.rs  f8_impl.rs  lib.rs  mpfloat.rs  op.rs  precision.rs  run_cfg.rs  test_traits.rs
libm-test/tests/: compare_built_musl.rs
libm/proofs/: div.g  sqrt.g  sqrtf.g
libm/src/: lib.rs  libm_helper.rs
libm/src/math/: ceil.rs  (+21 more)
src/: aarch64_linux.rs  arm_linux.rs  lib.rs  macros.rs  math.rs
src/float/: add.rs  cmp.rs  conv.rs  div.rs  extend.rs  mod.rs  traits.rs  trunc.rs
src/int/: big.rs  mod.rs
testcrate/: Cargo.toml
testcrate/benches/: float_add.rs  float_cmp.rs  float_conv.rs  float_div.rs  float_extend.rs  float_mul.rs  float_sub.rs  float_trunc.rs
testcrate/src/: bench.rs  lib.rs
testcrate/tests/: addsub.rs  big.rs  cmp.rs  conv.rs  div_rem.rs  lse.rs  mul.rs
(+44 files in other folders)
