[workspace]
resolver = "3"
members = [
    # Note that builtins-test-intrinsics cannot be a default member because it
    # needs the `mangled-names` feature disabled, while `testcrate` needs it
    # enabled.
    "builtins-test-intrinsics",
    "compiler-builtins",
    "testcrate",
]

default-members = [
    "compiler-builtins",
    "testcrate",
]

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

# [workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# # Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
# pre-build = [
#     # "dpkg --add-architecture $CROSS_DEB_ARCH",
#     # "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
# ]
# [workspace.metadata.cross.target.armv7-unknown-linux-gnueabi]
# pre-build = [
#     "dpkg --add-architecture $CROSS_DEB_ARCH",
#     "apt-get update && apt-get --assume-yes install valgrind:$CROSS_DEB_ARCH",
#     "cargo install iai-callgrind-runner",
# ]
[workspace.metadata.cross.build]
oijiojo = "oijoij"
# [workspace.metadata.cross.target.armv7-unknown-linux-musleabi]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "exit 1",
    "apt-get update && apt-get --assume-yes install valgrind:$CROSS_DEB_ARCH",
    "cargo install iai-callgrind-runner",
]

# image = "my/image:latest"
# [workspace.metadata.cross.build]
# env.volumes = ["A_DIRECTORY=/path/to/volume"]
